# polyline

./: CMakeLists.txt  README.md  main.cpp
Polyline/: CMakeLists.txt  Polyline.h  PolylineParser.cpp  PolylineParser.h
Polyline/tests/: CMakeLists.txt  test_polyline.cpp
Solver/: CMakeLists.txt  Solver.cpp  Solver.h
Solver/tests/: CMakeLists.txt  test_solver.cpp
Vector3/: CMakeLists.txt  Vector3.cpp  Vector3.h
Vector3/tests/: CMakeLists.txt  test_Vector3.cpp  test_utils.cpp
docs/: Polyline.md  Solver.md  Vector3.md  index.md
